# p-tracking-system

./: .gitignore  .pre-commit-config.yaml  README.md  current_task.md  mkdocs.yml  pyproject.toml  todo
.github/workflows/: deploy-backend.yml
ai/contracts/: detector.py
ai/depth/: depth_anything.py
ai/depth/depth_anything_v2/: app.py  run.py  run_video.py
ai/depth/depth_anything_v2/depth_anything_v2/: dpt.py
ai/depth/depth_anything_v2/metric_depth/: depth_to_pointcloud.py  run.py  train.py
ai/depth/depth_anything_v2/metric_depth/depth_anything_v2/: dpt.py
ai/depth/depth_anything_v2/metric_depth/util/: utils.py
ai/detectors/: yolo_detector.py
ai/domain/: depth.py  detector.py  tracker.py
ai/trackers/: yolo_tracker.py
ai/tracking_system_ai.egg-info/: PKG-INFO  SOURCES.txt
ai/utils/: constants.py  hugging_face.py
app/: logs
backend/: Dockerfile  README.md  main.py  requirements.txt
backend/api/: dependencies.py
backend/api/routers/: camera_stream.py  dashboard_stream.py  health.py  metrics.py
backend/config/: .env.example  config.yaml  settings.py
backend/contracts/: camera_metadata.py
backend/domain/: detection_box_center.py  logger.py
backend/infra/: logger_structlog.py  system_metrics.py
backend/services/: pipeline.py
backend/tests/: test_pipeline.py
backend/utils/: experiment.py  profiling.py
config/: config.yaml
config/logs/: logs
dashboard/: .env.development  .env.production
dashboard/src/: FloorPlanDashboard.tsx
dashboard/src/assets/: index.ts
dashboard/src/components/: graph.tsx
dashboard/src/hooks/: useCameraStream.ts
dashboard/src/utils/: nodes.ts
docs/: ai.md  backend.md  test.md
gradio/: README.md  app.py  backend_client.py
scripts/: depth_anything_v2.sh  run_checks.sh  start_server.sh
tests/: playground.ipynb  playground.py  test_dashboard_client.py  test_depth_anything.py  test_detectors.py  test_server.py  test_websockets.py
tracking_system_ai.egg-info/: SOURCES.txt
