# This is an overall alternative of SetupTools function that had been used before to create a package
# It tells pip which tool to use to build/install package.
# my-custom-ai-logic @ git+https://github.com/your-username/your-repo.git#subdirectory=ai_tools_folder
#tracking_system_ai@git+    .git#subdirectory=folder_name

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# project metadata
[project]
name = "tracking_system"  # What ll be used in 'pip install'
version = "0.0.5"  # i increased this after some modifications to the ai code. 
description = "tracking_system"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "opencv-python",
]

# pip install -e ".[dev]" -> This create a group of required package for dev, not deploy. differs between the user of this package and the contributer
# As the user does't require testing packages, but contributer do
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "httpx"
]

[tool.hatch.build.targets.wheel]
packages = ["ai"]


# Note that it ignore files in .gitignore by default.
[tool.ruff]
exclude = [
    "ai/Depth-Anything-V2",
    "playground.py",
    "playground.ipynb"
]